# cpp-call-cs

./: .gitignore  CMakeLists.txt  CSharpPlugin.sln  README.md
Loader/: HotLoader.cs  Loader.csproj
TestPlugin/: Test.cs  TestPlugin.csproj
jemalloc-test/: CMakeLists.txt  README.md
jemalloc-test/src/: je_nativehost.cpp  malloc_hook.c  malloc_hook.h  malloc_hook2.c
luabind/: CMakeLists.txt
luabind/cs-src/: CMakeLists.txt  cs.cpp
luabind/luabind-src/: CMakeLists.txt  luabind.c  malloc_hook.c  malloc_hook.h
nativehost/: CMakeLists.txt  README.md
nativehost/src/: nativehost.cpp
src/: nativehost.cpp
